# hydrosat_pdqueiros

./: .env-template  .gitignore  .terraform.lock.hcl  Dockerfile  LICENSE  README.md  dagster.yaml  docker-compose-infra.yaml  docker-compose.yaml  env.sh  local.env  pyproject.toml  terraform.tf  terraform.tfvars  values.yaml
config/: dagster2.yaml
data/: readme.md
images/: .$dagster.drawio.bkp
src/hydrosat_pdqueiros/defs/: assets.py  definitions.py  io_managers.py  jobs.py  partitions.py  resources.py  sensors.py
src/hydrosat_pdqueiros/services/: settings.py
src/hydrosat_pdqueiros/services/core/documents/: __init__.py  asset_data_document.py  base_document.py  bounding_box_document.py  field_document.py
src/hydrosat_pdqueiros/services/io/: logger.py  run_logger.py  s3_client.py
terraform/: locals-dagster.tf  locals-user-deployments.tf  main.tf  provider.tf  terraform.tfvars  variables.tf
tests/: create_sample_data.py  readme.md
